@@ -6,6 +6,7 @@ shady-KISS-skin History
 - Added posterbackgrounds
 - Fixed bug in displayreplay
 - Added setup for shift- and fade-times
+- Some improvements for tvguideng-view
 
 2015-07-02:
 - Some more stuff for new design
